eks/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: inspirations
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
        service: inspirations
    spec:
      containers:
      - name: nginx
        image: 809772074319.dkr.ecr.eu-west-1.amazonaws.com/beekast-inspirations:latest
        ports:
        - containerPort: 80
