eks/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: beekast-ingress
  namespace: inspirations
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port":
      "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:eu-west-1:809772074319:certificate/fba54615-1e59-4e71-ba46-b95ce1ffd763,arn:aws:acm:eu-west-1:809772074319:certificate/2fd5717c-0b57-439c-9ef4-5700f6eb11fd,arn:aws:acm:eu-west-1:809772074319:certificate/9231526a-7b39-4c2c-9665-4eea9542b8c6,arn:aws:acm:eu-west-1:809772074319:certificate/7eb5bd48-845b-4b41-a302-6633bde10e49,arn:aws:acm:eu-west-1:809772074319:certificate/be7f4439-842d-4343-aa95-d5438b710cbd
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-path: /ready
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: abaa007a-inspirations-beek-d4ea-740283947.eu-west-1.elb.amazonaws.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: inspirations
              servicePort: 80
